--- a/src/core_plugins/kibana/public/management/sections/indices/edit_index_pattern/field_controls.html
+++ b/src/core_plugins/kibana/public/management/sections/indices/edit_index_pattern/field_controls.html
@@ -2,7 +2,7 @@
   <a
     data-test-subj="indexPatternFieldEditButton"
     ng-href="{{ kbnUrl.getRouteHref(field, 'edit') }}"
-    aria-label="Edit"
+    aria-label="{{'kbn.management.indexPattern.edit.editField.button' | i18n: { defaultMessage: 'Edit' } }}"
     class="kuiButton kuiButton--basic kuiButton--small"
   >
     <span aria-hidden="true" class="kuiIcon fa-pencil"></span>
@@ -12,7 +12,7 @@
     ng-if="field.scripted"
     ng-click="remove(field)"
     class="kuiButton kuiButton--danger kuiButton--small"
-    aria-label="Delete"
+    aria-label="{{'kbn.management.indexPattern.edit.deleteField.button' | i18n: { defaultMessage: 'Delete' } }}"
   >
     <span aria-hidden="true" class="kuiIcon fa-trash"></span>
   </button>
