--- a/src/legacy/ui/public/vis/editors/default/default.html
+++ b/src/legacy/ui/public/vis/editors/default/default.html
@@ -1,14 +1,4 @@
 <div class="visEditor--default">
-  <div class="collapsible-sidebar visEditor__collapsibleSidebar" ng-class="::getSidebarClass()">
-    <vis-editor-sidebar class="visEditor__sidebar" />
-    <vis-editor-resizer
-      class="visEditor__resizer"
-      tabindex="0"
-      aria-label="{{::'common.ui.vis.editors.resizeAriaLabels' | i18n: { defaultMessage: 'Press left/right to resize the editor' } }}"
-      data-test-subj="visualizeEditorResizer"
-    >&#xFE19;</vis-editor-resizer>
-  </div>
-
   <div
     class="visEditor__canvas"
     data-shared-item
@@ -17,5 +7,25 @@
     data-title="{{vis.title}}"
     data-description="{{vis.description}}"
   />
+  <div class="collapsible-sidebar visEditor__collapsibleSidebar" ng-class="::getSidebarClass()">
+    <vis-editor-resizer
+      class="visEditor__resizer"
+      tabindex="0"
+      aria-label="{{::'common.ui.vis.editors.resizeAriaLabels' | i18n: { defaultMessage: 'Press left/right to resize the editor' } }}"
+      data-test-subj="visualizeEditorResizer"
+    >&#xFE19;</vis-editor-resizer>
+    <vis-editor-sidebar class="visEditor__sidebar" />
+    <new-vis-editor-sidebar
+      vis="vis"
+      vis-type="vis.type"
+      index-pattern="vis.indexPattern"
+      state="state"
+      aggs="state.aggs"
+      on-remove-agg="onRemoveAgg"
+      on-change-agg-type="onChangeAggType"
+      on-toggle-enable-agg="onToggleEnableAgg"
+    />
+  </div>
+
 
 </div>
